--- a/Wikipedia Viewer/index.html
+++ b/Wikipedia Viewer/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="search">
-        <form class="searchForm" action="index.html" method="post">
+        <form class="searchForm" action="index.html" method="post" id="searchForm">
           <input type="text" placeholder="search..." name="search" class="inputSearch" id="input">
           <div class="list"></div>
         </form>
