--- a/Wikipedia Viewer/index.html
+++ b/Wikipedia Viewer/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Wikipedia Viewer</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -10,7 +11,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
     <script src="main.js" charset="utf-8"></script>
   </head>
+  <div id="head">
+    <span>WikiTrix_</span>
+  </div>
   <body>
+
     <div class="container">
       <div class="search">
         <form class="searchForm" action="index.html" method="post" id="searchForm">
@@ -23,4 +28,8 @@
     </div>
 
   </body>
+  <div class="base" id="footer">
+    <span>This was made by Unwana Essien.</span>
+  </div>
+
 </html>
